--- a/index.html
+++ b/index.html
@@ -8,34 +8,22 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif}
 
-/* ========= RESET ========= */
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:"Inter",sans-serif;
-}
-
-/* ========= BODY ========= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
-  overflow-y:scroll;
   scroll-snap-type:y mandatory;
 }
 
-/* ========= NAV ========= */
+/* NAV */
 nav{
   position:fixed;
-  top:0;
-  left:50%;
+  top:0;left:50%;
   transform:translateX(-50%);
-  width:100%;
-  height:80px;
+  width:100%;height:80px;
   display:flex;
   justify-content:center;
-  align-items:center;
   gap:50px;
   background:rgba(10,10,10,.4);
   backdrop-filter:blur(12px);
@@ -50,13 +38,11 @@ nav span{
   cursor:pointer;
 }
 
-/* ========= SECTIONS ========= */
+/* SECTIONS */
 .section{
   min-height:100vh;
-  scroll-snap-align:start;
-  display:flex;
-  justify-content:flex-start;
   padding:180px 10vw 160px 22vw;
+  scroll-snap-align:start;
 }
 
 .section-block{
@@ -65,19 +51,14 @@ nav span{
   max-width:1100px;
 }
 
-/* ========= TITULOS ========= */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
 }
 
-/* ========= HERO ========= */
-.section.hero{
-  align-items:center;
-}
-
-.section.hero h1{
+/* HERO */
+.hero h1{
   font-size:clamp(80px,7vw,140px);
   margin-left:-4px;
 }
@@ -90,17 +71,16 @@ h1{
   color:#777;
 }
 
-/* ========= ABOUT ========= */
+/* ABOUT */
 .about{
   display:flex;
-  align-items:flex-start;
   margin-top:12px;
 }
 
 .about p{
+  max-width:700px;
   font-size:15px;
   color:#aaa;
-  max-width:700px;
   line-height:1.6;
 }
 
@@ -109,31 +89,14 @@ h1{
   height:400px;
   margin-left:40px;
   object-fit:cover;
-  opacity:.9;
 }
 
-/* ========= PORTFOLIO ========= */
+/* PORTFOLIO */
 .portfolio-wrapper{
-  position:relative;
   margin-top:32px;
   margin-left:8px;
   overflow:hidden;
   padding-right:120px;
-}
-
-.portfolio-wrapper::after{
-  content:"";
-  position:absolute;
-  top:0;
-  right:0;
-  width:120px;
-  height:100%;
-  pointer-events:none;
-  background:linear-gradient(
-    to right,
-    rgba(10,10,10,0),
-    rgba(10,10,10,1)
-  );
 }
 
 .portfolio-carousel{
@@ -141,26 +104,15 @@ h1{
   gap:48px;
   overflow-x:auto;
   padding-bottom:20px;
-  scrollbar-width:thin;
-  scrollbar-color:#444 transparent;
-}
-
-.portfolio-carousel::-webkit-scrollbar{
-  height:6px;
-}
-
-.portfolio-carousel::-webkit-scrollbar-thumb{
-  background:#444;
-  border-radius:6px;
 }
 
 .project-card{
   min-width:460px;
-  text-decoration:none;
-  color:inherit;
   opacity:0;
   transform:translateY(12px);
   transition:.8s ease;
+  text-decoration:none;
+  color:inherit;
 }
 
 .project-card.is-visible{
@@ -178,26 +130,13 @@ h1{
   width:100%;
   height:100%;
   object-fit:cover;
-  transition:.4s ease;
-}
-
-.project-card:hover img{
-  transform:scale(1.03);
 }
 
 .project-inner h2{
   font-size:28px;
-  font-weight:400;
 }
 
-.project-inner span{
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
-}
-
-/* ========= CV ========= */
+/* CV */
 .timeline{
   position:relative;
   margin-top:60px;
@@ -211,13 +150,11 @@ h1{
   width:1px;
   height:0;
   background:linear-gradient(#fff,#777);
-  transition:height .25s ease-out;
 }
 
 .timeline-item{
   position:relative;
   margin-bottom:80px;
-  max-width:520px;
   opacity:0;
   transform:translateY(20px);
   transition:.8s ease;
@@ -242,7 +179,6 @@ h1{
 
 .timeline-card{
   background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
   border-radius:20px;
   padding:28px;
 }
@@ -251,29 +187,36 @@ h1{
   font-size:18px;
   letter-spacing:.12em;
   text-transform:uppercase;
-  margin-bottom:16px;
 }
 
-.timeline-card strong{
+/* CONTACTO */
+.contact{
+  margin-top:32px;
+}
+
+.contact-item{
+  margin-bottom:20px;
+}
+
+.contact-item strong{
   display:block;
-  font-size:16px;
 }
 
-.timeline-card span{
-  font-size:13px;
+.contact-item a{
   color:#888;
+  text-decoration:none;
 }
-
 </style>
 </head>
 
 <body>
 
 <nav>
-  <span>Inicio</span>
-  <span>Sobre mí</span>
-  <span>Portfolio</span>
-  <span>CV</span>
+  <span data-i="0">Inicio</span>
+  <span data-i="1">Sobre mí</span>
+  <span data-i="2">Portfolio</span>
+  <span data-i="3">CV</span>
+  <span data-i="4">Contacto</span>
 </nav>
 
 <section class="section hero">
@@ -289,9 +232,9 @@ h1{
     <div class="about">
       <p>
         Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico,
-        con formación técnica y sensibilidad por el proceso completo de diseño.
+        con base técnica y sensibilidad por el proceso completo de diseño.
       </p>
-      <img src="foto.jpg" alt="">
+      <img src="foto.jpg">
     </div>
   </div>
 </section>
@@ -299,26 +242,11 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
-
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-
-        <a href="#" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg"></div>
-          <div class="project-inner">
-            <h2>NODE</h2>
-            <span>Proyecto final de grado</span>
-          </div>
-        </a>
-
-        <a href="#" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg"></div>
-          <div class="project-inner">
-            <h2>Sixay · Cómoda</h2>
-            <span>Diseño de mobiliario</span>
-          </div>
-        </a>
-
+        <a class="project-card"><div class="project-image"></div><div class="project-inner"><h2>NODE</h2></div></a>
+        <a class="project-card"><div class="project-image"></div><div class="project-inner"><h2>Sixay</h2></div></a>
+        <a class="project-card"><div class="project-image"></div><div class="project-inner"><h2>Exploración</h2></div></a>
       </div>
     </div>
   </div>
@@ -327,58 +255,44 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
-
     <div class="timeline">
-      <div class="timeline-line" id="timelineLine"></div>
+      <div class="timeline-line" id="line"></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Idiomas</h3></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Software</h3></div></div>
+    </div>
+  </div>
+</section>
 
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Universitat Jaume I</strong>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Universitat Politècnica de València</strong>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Erasmus</h3>
-          <strong>Londres</strong>
-        </div>
-      </div>
-
+<section class="section">
+  <div class="section-block">
+    <h1>Contacto</h1>
+    <div class="contact">
+      <div class="contact-item"><strong>Email</strong><a href="#">luis@email.com</a></div>
+      <div class="contact-item"><strong>Ubicación</strong><span>Valencia</span></div>
     </div>
   </div>
 </section>
 
 <script>
-/* NAV */
+const sections=document.querySelectorAll(".section");
 document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
+  b.onclick=()=>sections[i].scrollIntoView({behavior:"smooth"});
 });
 
-/* OBSERVER */
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
+const observer=new IntersectionObserver(e=>{
+  e.forEach(x=>x.target.classList.toggle("is-visible",x.isIntersecting));
 },{threshold:.2});
 
 document.querySelectorAll(".project-card,.timeline-item")
-  .forEach(el=>observer.observe(el));
+.forEach(el=>observer.observe(el));
 
-/* TIMELINE LINE */
 const timeline=document.querySelector(".timeline");
-const line=document.getElementById("timelineLine");
+const line=document.getElementById("line");
 
 window.addEventListener("scroll",()=>{
-  const rect=timeline.getBoundingClientRect();
-  const visible=Math.min(window.innerHeight-rect.top,rect.height);
-  line.style.height=Math.max(0,visible)+"px";
+  const r=timeline.getBoundingClientRect();
+  line.style.height=Math.max(0,Math.min(window.innerHeight-r.top,r.height))+"px";
 });
 </script>
 
