--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@ h1{
   width:120px;
   height:100%;
   pointer-events:none;
-  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
+  background:linear-gradient(
+    to right,
+    rgba(10,10,10,0),
+    rgba(10,10,10,1)
+  );
 }
 
 .portfolio-carousel{
@@ -146,8 +150,14 @@ h1{
   scrollbar-color:#444 transparent;
 }
 
-.portfolio-carousel::-webkit-scrollbar{height:6px}
-.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
+.portfolio-carousel::-webkit-scrollbar{
+  height:6px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background:#444;
+  border-radius:6px;
+}
 
 .project-card{
   min-width:460px;
@@ -166,7 +176,30 @@ h1{
 .project-image{
   height:260px;
   margin-bottom:20px;
-  background:#222;
+  overflow:hidden;
+}
+
+.project-image img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  transition:transform .4s ease;
+}
+
+.project-card:hover img{
+  transform:scale(1.03);
+}
+
+.project-inner h2{
+  font-size:28px;
+  font-weight:400;
+}
+
+.project-inner span{
+  font-size:12px;
+  letter-spacing:.18em;
+  color:#777;
+  text-transform:uppercase;
 }
 
 /* ========= CV ========= */
@@ -293,11 +326,48 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
+
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-        <a class="project-card"><div class="project-image"></div></a>
-        <a class="project-card"><div class="project-image"></div></a>
-        <a class="project-card"><div class="project-image"></div></a>
+
+        <a href="node.html" class="project-card">
+          <div class="project-image">
+            <img src="brazo1.jpg" alt="">
+          </div>
+          <div class="project-inner">
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+          </div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-image">
+            <img src="reloj1.jpg" alt="">
+          </div>
+          <div class="project-inner">
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+          </div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-image">
+            <img src="secador2.jpg" alt="">
+          </div>
+          <div class="project-inner">
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+          </div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-image"></div>
+          <div class="project-inner">
+            <h2>Proyecto conceptual</h2>
+            <span>Diseño de producto</span>
+          </div>
+        </a>
+
       </div>
     </div>
   </div>
@@ -310,10 +380,21 @@ h1{
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
 
-      <div class="timeline-item"><div class="timeline-card">UJI</div></div>
-      <div class="timeline-item"><div class="timeline-card">UPV</div></div>
-      <div class="timeline-item"><div class="timeline-card">Erasmus Londres</div></div>
-      <div class="timeline-item"><div class="timeline-card">Idiomas / Software</div></div>
+      <div class="timeline-item">
+        <div class="timeline-card">UJI</div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">UPV</div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">Erasmus Londres</div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">Idiomas · Software</div>
+      </div>
 
     </div>
   </div>
@@ -325,8 +406,12 @@ h1{
     <h1>Contacto</h1>
     <div class="contact">
       <p>Si te interesa mi perfil o quieres hablar sobre un proyecto, escríbeme.</p>
-      <a href="mailto:luis@example.com">luis@example.com<br><span>Email</span></a>
-      <a href="https://www.linkedin.com" target="_blank">LinkedIn<br><span>Perfil profesional</span></a>
+      <a href="mailto:luis@example.com">
+        luis@example.com<br><span>Email</span>
+      </a>
+      <a href="https://www.linkedin.com" target="_blank">
+        LinkedIn<br><span>Perfil profesional</span>
+      </a>
     </div>
   </div>
 </section>
