--- a/index.html
+++ b/index.html
@@ -423,6 +423,9 @@ h1{
   <div class="section-block">
     <h1>Contacto</h1>
     <div class="contact">
+      <a href="tel:+34600000000">
+        +34 600 000 000<br><span>Teléfono</span>
+      </a>
       <a href="mailto:luis@example.com">
         luis@example.com<br><span>Email</span>
       </a>
