--- a/index.html
+++ b/index.html
@@ -117,44 +117,203 @@ h1{
 }
 
 /* ========= PORTFOLIO ========= */
-/* (idéntico al anterior, no tocado) */
-
-/* ========= CV ========= */
-/* (idéntico al anterior, no tocado) */
-
-/* ========= CONTACTO — NUEVO DISEÑO ========= */
-.contact{
-  margin-top:60px;
-  padding-left:8px;
-  display:flex;
-  flex-direction:column;
-  gap:32px;
+.portfolio-wrapper{
+  position:relative;
+  margin-top:32px;
+  margin-left:8px;
+  overflow:hidden;
+  padding-right:120px;
 }
 
-.contact-main a{
-  font-size:28px;
-  font-weight:400;
-  color:#f5f5f5;
-  text-decoration:none;
+.portfolio-wrapper::after{
+  content:"";
+  position:absolute;
+  top:0;
+  right:0;
+  width:120px;
+  height:100%;
+  pointer-events:none;
+  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
 }
 
-.contact-main a:hover{
-  opacity:.7;
-}
-
-.contact-secondary{
+.portfolio-carousel{
   display:flex;
   gap:48px;
+  overflow-x:auto;
+  padding-bottom:20px;
+  scroll-behavior:smooth;
+  scrollbar-width:thin;
+  scrollbar-color:#444 transparent;
 }
 
-.contact-secondary a{
-  font-size:16px;
-  color:#aaa;
+.portfolio-carousel::-webkit-scrollbar{height:6px}
+.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
+
+.project-card{
+  min-width:460px;
   text-decoration:none;
+  color:inherit;
+  opacity:0;
+  transform:translateY(12px);
+  transition:opacity .8s ease, transform .8s ease;
 }
 
-.contact-secondary a:hover{
+.project-card.is-visible{
+  opacity:1;
+  transform:none;
+}
+
+.project-image{
+  height:260px;
+  margin-bottom:20px;
+  overflow:hidden;
+}
+
+.project-image img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  transition:transform .4s ease;
+}
+
+.project-card:hover img{
+  transform:scale(1.03);
+}
+
+.project-inner h2{
+  font-size:28px;
+  font-weight:400;
+}
+
+.project-inner span{
+  font-size:12px;
+  letter-spacing:.18em;
+  color:#777;
+  text-transform:uppercase;
+}
+
+/* ========= CV TIMELINE ========= */
+.timeline{
+  position:relative;
+  margin-top:60px;
+  padding-left:60px;
+}
+
+.timeline-line{
+  position:absolute;
+  left:20px;
+  top:0;
+  width:1px;
+  height:0;
+  background:linear-gradient(#fff,#777);
+  transition:height .25s ease-out;
+}
+
+.timeline-item{
+  position:relative;
+  margin-bottom:80px;
+  max-width:520px;
+  opacity:0;
+  transform:translateY(20px);
+  transition:.8s ease;
+}
+
+.timeline-item.is-visible{
+  opacity:1;
+  transform:none;
+}
+
+.timeline-item::before{
+  content:"";
+  position:absolute;
+  left:-44px;
+  top:50%;
+  transform:translateY(-50%);
+  width:10px;
+  height:10px;
+  border-radius:50%;
+  background:#fff;
+}
+
+.timeline-card{
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.08);
+  border-radius:20px;
+  padding:28px;
+}
+
+.timeline-card h3{
+  font-size:18px;
+  font-weight:500;
+  letter-spacing:.12em;
+  text-transform:uppercase;
+  margin-bottom:16px;
+}
+
+.timeline-card strong{
+  display:block;
+  font-size:16px;
+}
+
+.timeline-card span{
+  font-size:13px;
+  color:#888;
+}
+
+/* ========= CONTACTO — FRAMER STYLE ========= */
+.contact-framer{
+  margin-top:60px;
+  display:flex;
+  flex-direction:column;
+  gap:24px;
+  padding-left:8px;
+}
+
+.contact-card{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:28px 32px;
+  border-radius:22px;
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.08);
+  text-decoration:none;
   color:#f5f5f5;
+  transition:.35s ease;
+}
+
+.contact-card:hover{
+  transform:translateY(-2px);
+  background:rgba(255,255,255,.06);
+}
+
+.contact-left{
+  display:flex;
+  flex-direction:column;
+}
+
+.contact-left span{
+  font-size:12px;
+  letter-spacing:.18em;
+  color:#777;
+  text-transform:uppercase;
+}
+
+.contact-left strong{
+  margin-top:6px;
+  font-size:20px;
+  font-weight:400;
+}
+
+.contact-arrow{
+  font-size:18px;
+  color:#666;
+  transition:.35s ease;
+}
+
+.contact-card:hover .contact-arrow{
+  transform:translateX(4px);
+  color:#aaa;
 }
 
 </style>
@@ -200,27 +359,124 @@ h1{
 </section>
 
 <!-- PORTFOLIO -->
-<!-- (sin cambios, igual que antes) -->
+<section class="section">
+  <div class="section-block">
+    <h1>Portfolio</h1>
+    <div class="portfolio-wrapper">
+      <div class="portfolio-carousel">
+
+        <a href="node.html" class="project-card">
+          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+          </div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+          </div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-image"><img src="secador2.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+          </div>
+        </a>
+
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- CV -->
-<!-- (sin cambios, igual que antes) -->
+<section class="section">
+  <div class="section-block">
+    <h1>CV</h1>
+
+    <div class="timeline">
+      <div class="timeline-line" id="timelineLine"></div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Jaume I</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Politècnica de València</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Programa Erasmus</strong>
+          <span>Londres</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Idiomas</h3>
+          <strong>Español · Inglés · Húngaro</strong>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Software</h3>
+          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
+          <span>Fusion 360 · Sinutrain · 3ds Max</span>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 <!-- CONTACTO -->
 <section class="section">
   <div class="section-block">
     <h1>Contacto</h1>
 
-    <div class="contact">
-      <div class="contact-main">
-        <a href="mailto:luis@example.com">luis@example.com</a>
-      </div>
+    <div class="contact-framer">
 
-      <div class="contact-secondary">
-        <a href="tel:+34600000000">+34 600 000 000</a>
-        <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
-      </div>
+      <a href="tel:+34600000000" class="contact-card">
+        <div class="contact-left">
+          <span>Teléfono</span>
+          <strong>+34 600 000 000</strong>
+        </div>
+        <div class="contact-arrow">→</div>
+      </a>
+
+      <a href="mailto:luis@example.com" class="contact-card">
+        <div class="contact-left">
+          <span>Email</span>
+          <strong>luis@example.com</strong>
+        </div>
+        <div class="contact-arrow">→</div>
+      </a>
+
+      <a href="https://www.linkedin.com" target="_blank" class="contact-card">
+        <div class="contact-left">
+          <span>LinkedIn</span>
+          <strong>Perfil profesional</strong>
+        </div>
+        <div class="contact-arrow">→</div>
+      </a>
+
     </div>
-
   </div>
 </section>
 
@@ -228,6 +484,23 @@ h1{
 document.querySelectorAll("nav span").forEach((b,i)=>{
   b.onclick=()=>document.querySelectorAll(".section")[i]
     .scrollIntoView({behavior:"smooth"});
+});
+
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
+},{threshold:.2});
+
+document.querySelectorAll(".project-card,.timeline-item")
+  .forEach(el=>observer.observe(el));
+
+const timeline=document.querySelector(".timeline");
+const line=document.getElementById("timelineLine");
+
+window.addEventListener("scroll",()=>{
+  if(!timeline||!line) return;
+  const rect=timeline.getBoundingClientRect();
+  const visible=Math.min(window.innerHeight-rect.top,rect.height);
+  line.style.height=Math.max(0,visible)+"px";
 });
 </script>
 
