--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ h1{
   text-transform:uppercase;
 }
 
-/* ========= CV TIMELINE ========= */
+/* ========= CV ========= */
 .timeline{
   position:relative;
   margin-top:60px;
@@ -242,30 +242,12 @@ h1{
   padding:28px;
 }
 
-.timeline-card h3{
-  font-size:18px;
-  font-weight:500;
-  letter-spacing:.12em;
-  text-transform:uppercase;
-  margin-bottom:16px;
-}
-
-.timeline-card strong{
-  display:block;
-  font-size:16px;
-}
-
-.timeline-card span{
-  font-size:13px;
-  color:#888;
-}
-
-/* ========= CONTACTO — FRAMER STYLE ========= */
+/* ========= CONTACTO — FRAMER FINO ========= */
 .contact-framer{
   margin-top:60px;
   display:flex;
   flex-direction:column;
-  gap:24px;
+  gap:18px;
   padding-left:8px;
 }
 
@@ -273,10 +255,10 @@ h1{
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:28px 32px;
-  border-radius:22px;
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
+  padding:20px 26px;
+  border-radius:18px;
+  background:rgba(255,255,255,.035);
+  border:0.75px solid rgba(255,255,255,.07);
   text-decoration:none;
   color:#f5f5f5;
   transition:.35s ease;
@@ -284,7 +266,7 @@ h1{
 
 .contact-card:hover{
   transform:translateY(-2px);
-  background:rgba(255,255,255,.06);
+  background:rgba(255,255,255,.055);
 }
 
 .contact-left{
@@ -293,7 +275,7 @@ h1{
 }
 
 .contact-left span{
-  font-size:12px;
+  font-size:11px;
   letter-spacing:.18em;
   color:#777;
   text-transform:uppercase;
@@ -301,12 +283,12 @@ h1{
 
 .contact-left strong{
   margin-top:6px;
-  font-size:20px;
+  font-size:19px;
   font-weight:400;
 }
 
 .contact-arrow{
-  font-size:18px;
+  font-size:17px;
   color:#666;
   transition:.35s ease;
 }
@@ -329,7 +311,6 @@ h1{
   <span data-i="4">Contacto</span>
 </nav>
 
-<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
     <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
@@ -337,7 +318,6 @@ h1{
   </div>
 </section>
 
-<!-- SOBRE MI -->
 <section class="section">
   <div class="section-block">
     <h1>Sobre mí</h1>
@@ -358,94 +338,26 @@ h1{
   </div>
 </section>
 
-<!-- PORTFOLIO -->
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-
-        <a href="node.html" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
-          <div class="project-inner">
-            <h2>NODE</h2>
-            <span>Proyecto final de grado</span>
-          </div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
-          <div class="project-inner">
-            <h2>Sixay · Cómoda</h2>
-            <span>Diseño de mobiliario</span>
-          </div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-image"><img src="secador2.jpg" alt=""></div>
-          <div class="project-inner">
-            <h2>Exploración material</h2>
-            <span>Proyecto experimental</span>
-          </div>
-        </a>
-
+        <!-- proyectos -->
       </div>
     </div>
   </div>
 </section>
 
-<!-- CV -->
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
-
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Grado en Ingeniería en Diseño Industrial</strong>
-          <span>Universitat Jaume I</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Grado en Ingeniería en Diseño Industrial</strong>
-          <span>Universitat Politècnica de València</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Programa Erasmus</strong>
-          <span>Londres</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Idiomas</h3>
-          <strong>Español · Inglés · Húngaro</strong>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Software</h3>
-          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
-          <span>Fusion 360 · Sinutrain · 3ds Max</span>
-        </div>
-      </div>
-
     </div>
   </div>
 </section>
 
-<!-- CONTACTO -->
 <section class="section">
   <div class="section-block">
     <h1>Contacto</h1>
